JPAR-106 - address Java 9 constructor deprecations